[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Portal.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 10 )

[node name="Portals" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -20, -24 )
scale = Vector2( 1.00959, 2.21858 )
shape = SubResource( 1 )

[node name="EntranceSpawnPosition" type="Position2D" parent="CollisionShape2D"]
position = Vector2( 10.9905, 10.9015 )

[node name="Exit" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
position = Vector2( 19, -24 )
scale = Vector2( 1.00782, 2.2013 )
shape = SubResource( 2 )

[node name="ExitSpawnPosition" type="Position2D" parent="Exit/CollisionShape2D"]
position = Vector2( -10.8195, 10.9871 )

[connection signal="body_entered" from="." to="." method="_on_Portals_body_entered"]
[connection signal="body_entered" from="Exit" to="." method="_on_Exit_body_entered"]
